# valve_master_guard

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  install.bat  valve_master_guard.sln
master_walker/: main.cpp  master_walker.vcxproj
src/: main.cpp
